# fetch_ros

./: README.md  frames.gv
fetch_ai/: CMakeLists.txt  package.xml
fetch_ai/launch/: arm_joy.launch
fetch_ai/scripts/: arm_joy_controller.py
fetch_manipulation/fetch_arm_path_follow/: CMakeLists.txt  package.xml
fetch_manipulation/fetch_arm_path_follow/scripts/: path_follow.py
fetch_manipulation/fetch_arm_path_follow/src/: path_follow.cpp
fetch_mapping/: CMakeLists.txt  package.xml
fetch_mapping/configuration_files/: fetch_2d.lua
fetch_mapping/launch/: fetch_mapping_2d.launch
fetch_maps/: CMakeLists.txt  package.xml
fetch_maps/maps/: cas_map.pgm  cas_map.yaml  cas_map_keepout.yaml  room_code.yaml
fetch_navigation/: CMakeLists.txt  package.xml
fetch_navigation/config/: costmap_common.yaml  move_base.yaml
fetch_navigation/config/fetch/: move_base.yaml
fetch_navigation/launch/: fetch_nav.launch
fetch_objects/ar_tracking/: CMakeLists.txt  package.xml
fetch_objects/ar_tracking/ar_images/: .~lock.2-3.odt#  2-3.odt
fetch_objects/ar_tracking/bundles/: card_reader_bundle.xml  cylinder_bundle.xml
fetch_objects/ar_tracking/launch/: fetch_bundle.launch  fetch_bundle_box.launch  fetch_bundle_cylinder.launch  fetch_bundle_door.launch  fetch_markers.launch
fetch_objects/ar_tracking/scripts/: grab_0.py  grab_13.py  grab_3.py  open_door.py  test_tf.py
fetch_objects/fetch_detection/: CMakeLists.txt  package.xml
fetch_objects/fetch_detection/src/: detect_tabletop.cpp
fetch_perception/find_card_reader/: CMakeLists.txt  package.xml
fetch_perception/find_card_reader/bag_examples/: depth_image_template.npy
fetch_perception/find_card_reader/include/: depth_template.npy
fetch_perception/find_card_reader/scripts/: find_card_reader.py
fetch_room/: CMakeLists.txt  package.xml
fetch_room/maps/: room_code.yaml
fetch_room/scripts/: roomTraverse.py  room_check.py
random_walker/: CMakeLists.txt  package.xml
random_walker/launch/: follow_waypoints.launch
random_walker/scripts/: follow_waypoints.py  follow_waypoints_untimed.py
